@startuml
'https://plantuml.com/class-diagram
hide circle

title UserInterface Component Diagram


skinparam classAttributeIconSize 0

class UserInterface
class Parser {
    + {static} parseCommand(command: String)
    - {static} splitCommand(command: String)
    - {static} recursiveGetCommand(command: String)
}
class OutputManager

package "Model" {
    class User {
    }
    class Transaction {
    }
    class Bank {
    }
    class Budget {
    }
}
class InputManager {
    + {static} getNextCommand(scanner: Scanner) : String
}
interface Command <<interface>> {
    + execute(): String
    + shouldExit(): boolean
}

package commands <<Folder>> {
    note "All classes here implement Command interface" as N
}

UserInterface --> InputManager
UserInterface --> Parser

Parser --> commands : instantiates a command
Parser --> Command : create and executes
commands --> User : fetch and update data
commands --> OutputManager: outputs message

User --> Budget : has a list of
User --> Bank : has a list of
Bank --> Transaction : has a list of

@enduml